Fixed misaligned burger menu
Fixed the alignment in mobile view

--- a/Shared/css/style.css
+++ b/Shared/css/style.css
@@ -6501,8 +6501,19 @@ only screen and (max-device-width: 568px) {
   display: none;
 }
 
+.diagram-hide{
+  height: 50px;
+}
+
+
 @media only screen and (max-width: 380px),
 only screen and (max-device-width: 568px) {
+
+  .navheader{
+    position: relative;
+    overflow: visible;
+    height: 40px;
+  }
 
   .navheader .navBurgerIcon {
     display: block;
@@ -6511,10 +6522,15 @@ only screen and (max-device-width: 568px) {
     width: 29px;
     margin-left: 15px
   } 
+
+  .diagram-hide{
+    height: 0px;
+  }
  
   #navBurgerBox{
     position: absolute;
-    top: 50px;
+    top: 100%;
+    left: 0;
     width: 32px;
     padding: 10px;
     height: 120px;
